Make sure that the image is properly updated on frame switch on merge

Sometimes the bounding rect of the layer is changed when switching
frames, in such a case we should actually update more than its new
rect. Hence we add the entire image bounds to the update rect (like
we do on the normal frame switch).

BUG:476495